Fix #84: preserve whitespace in code snippets

--- a/resources/css/pmd-tester.css
+++ b/resources/css/pmd-tester.css
@@ -8,6 +8,7 @@ body, td, select, input, li{
 code {
   font-family: Courier, monospace;
   font-size: 13pt;
+  white-space: pre;
 }
 code.highlight {
   background-color: yellow;
